Fixed many spacing issues, most of which related to header and flash

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,12 +7,13 @@
 
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  padding: 68px 0px 45px;
 }
 
-div.main-content {
-  margin-top: 50px;
+hr {
+  margin-top: 0px;
+  margin-bottom: 15px;
 }
-
 
 
 
@@ -23,6 +24,7 @@ div.main-content {
   height: 100%;
   width: 25%;
   padding: 10px 40px;
+  margin-top: -16px;
   left: 0px;
   background: #f4f4f4;
 }
@@ -49,8 +51,9 @@ div.main-content {
 
 /* BODY */
 
-#page_container {
-    padding: 40px 15px;
+div.page-header {
+  margin-top: 0px;
+  margin-bottom: 15px;
 }
 
 
@@ -68,14 +71,18 @@ img.img-table {
   margin: 0 auto;
 }
 
+table.table {
+  margin-bottom: 15px;
+}
+
 
 
 
 /* FLASH */
 
 #flash {
-    float: none;
-    margin: 35px auto -25px;
+    margin: 0px auto 15px;
+
 }
 
 
@@ -115,7 +122,7 @@ div.gallery-frame {
 
 section.gallery-header {
   background: #ddd;
-  margin: 25px 0px 15px;
+  margin: 0px auto 15px;
   padding: 10px 0px 30px;
   text-align: center;
 }
